<resources>
    <string name="app_name">My Library</string>
    <string name="name">Enter Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="library_management_system">LIBRARY MANAGEMENT SYSTEM</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="student"><b>Student</b></string>
    <string name="employee"><b>Employee</b></string>
    <string name="genre">GENRE</string>
    <string name="tv">tv</string>
    <string name="add">+</string>
    <string name="n">Name</string>
    <string name="author">Author</string>
    <string name="pages">Pages</string>
    <string name="add_books">ADD BOOKS</string>
    <string name="bname">Book Name</string>
    <string name="aname">Author Name</string>
    <string name="ge">Genre</string>
    <string name="a">Add</string>
    <string name="Open">openDrawer</string>
    <string name="Close">closeDrawer</string>
    <string name="profile">Profile</string>
    <string name="books">My Books</string>
    <string name="about">About</string>
    <string name="Contact">Contact Us</string>
    <string name="search">Search</string>
    <string name="logout">LogOut</string>
    <string name="back">Back</string>
    <string name="enter">Enter Your Password</string>
    <string name="pass">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_phone">Edit Phone Number</string>
    <string name="new_name">Enter New Name</string>
    <string name="new_phone">Enter Your New Phone Number</string>
    <string name="search_by">Search by :</string>
    <string-array name="search_list">
        <item>Book Name</item>
        <item>Author Name</item>
    </string-array>
    <string name="shalvi"><i>Shalvi Sinha</i></string>
    <string name="my_no"><i>7494080480</i></string>
    <string name="e_mail"><i>shalvi01032@gmail.com</i></string>
    <string name="upload">Upload PDF</string>
</resources>
