<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="220sp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/pass"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/enter"
        android:inputType="textPassword" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ok"
            android:layout_width="89dp"
            android:layout_height="51dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.137" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="102dp"
            android:layout_height="47dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="72dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.242" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>