<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/add_books"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bname"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/bname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/aname"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/aname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bname" />

    <EditText
        android:id="@+id/genre"
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/ge"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aname" />

    <Button
        android:id="@+id/button"
        style="?android:attr/buttonBarStyle"
        android:layout_width="133dp"
        android:layout_height="55dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/corner_round"
        android:backgroundTint="#333333"
        android:text="@string/a"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/upload"
        style="?android:attr/buttonBarStyle"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/corner_round"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/upload"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

</androidx.constraintlayout.widget.ConstraintLayout>